--- a/MappingAlgorithms/MappingAlgorithms.ipynb
+++ b/MappingAlgorithms/MappingAlgorithms.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/marcinluczkowski/structuralCircle/blob/main/Mapping_algorithms.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/marcinluczkowski/structuralCircle/blob/main/MappingAlgorithms/MappingAlgorithms.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -18,6 +18,15 @@
       "source": [
         "# Introduction"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TEST!"
+      ],
+      "metadata": {
+        "id": "fKCw4L-VUFS-"
+      }
     },
     {
       "cell_type": "markdown",
