--- a/MatchingWrapper/Properties/Resources.resx
+++ b/MatchingWrapper/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="matching_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\matching_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="min_bb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\min_bb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
